--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "authors": [
     "Denis Ciccale <dciccale@gmail.com>"
   ],
-  "description": "feather icons sass",
+  "description": "feather icons sass from @colebemis in sass",
   "main": "feather.css",
   "keywords": [
     "feather",
